--- a/League.Test/League.Test.csproj
+++ b/League.Test/League.Test.csproj
@@ -5,15 +5,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.5" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.10" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
         <PackageReference Include="NUnit" Version="3.12.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
+        <PackageReference Include="NUnit3TestAdapter" Version="3.17.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.5" />
-        <PackageReference Include="Moq" Version="4.14.1" />
+        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.10" />
+        <PackageReference Include="Moq" Version="4.15.2" />
         <PackageReference Include="ObjectsComparer" Version="1.4.1" />
     </ItemGroup>
 
