--- a/League/League.csproj
+++ b/League/League.csproj
@@ -62,9 +62,9 @@
 	  <Content Remove="Configuration\Tenant.A-Beach.Production.config" />
 	  <Content Remove="Configuration\Tenant.A-Indoor.Development.config" />
 	  <Content Remove="Configuration\Tenant.A-Indoor.Production.config" />
+	  <Content Remove="Configuration\Tenant.Default.Development.config" />
 	  <Content Remove="Configuration\Tenant.OtherOrg.Development.config" />
 	  <Content Remove="Configuration\Tenant.TestOrg.Development.config" />
-	  <Content Remove="Configuration\_Tenant.Default.Development.config" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -78,7 +78,7 @@
 	  <None Include="Configuration\Tenant.A-Beach.Development.config" />
 	  <None Include="Configuration\Tenant.A-Indoor.Production.config" />
 	  <None Include="Configuration\Tenant.A-Indoor.Development.config" />
-	  <None Include="Configuration\_Tenant.Default.Development.config" />
+	  <None Include="Configuration\Tenant.Default.Development.config" />
 	  <None Include="Configuration\Tenant.OtherOrg.Development.config" />
 	  <None Include="Configuration\Tenant.TestOrg.Development.config" />
 	</ItemGroup>
