--- a/Axuno.Tools/Axuno.Tools.csproj
+++ b/Axuno.Tools/Axuno.Tools.csproj
@@ -1,13 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NodaTime" Version="3.0.0" />
-    <PackageReference Include="TimeZoneConverter" Version="3.2.0" />
-    <PackageReference Include="TimeZoneNames" Version="4.0.1" />
+    <PackageReference Include="NodaTime" Version="3.0.3" />
+    <PackageReference Include="TimeZoneConverter" Version="3.3.0" />
+    <PackageReference Include="TimeZoneNames" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
