Refactor HtmlToPdfConverter and update ReportSheetCache
* Move HtmlToPdfConverter to TournamentManager namespace
* Add detailed logging and error handling in HtmlToPdfConverter
* Add BrowserKind to set the kind of browser to use
* Add ability to create PDF from html content or a file
* Introduce DisplayMatchDate flag in ReportSheetCache
* Modify IsOutdated to check DisplayMatchDate flag
* Update Match constructor to include IServiceProvider
* Update ReportSheet action to use _serviceProvider for ReportSheetCache
* Updated ReportSheet.cshtml to conditionally display match date
* Add html {-webkit-print-color-adjust: exact; } CSS to ReportSheet.cshtml (enables colored output for PDF)
* Moved PuppeteerSharp package reference to TournamentManager.csproj
* Added localization for English and German

--- a/TournamentManager/TournamentManager/TournamentManager.csproj
+++ b/TournamentManager/TournamentManager/TournamentManager.csproj
@@ -25,6 +25,7 @@ Volleyball League is an open source sports platform that brings everything neces
     </PackageReference>
     <PackageReference Include="OxyPlot.Core" Version="2.1.2" />
     <PackageReference Include="OxyPlot.SkiaSharp" Version="2.1.2" />
+    <PackageReference Include="PuppeteerSharp" Version="20.0.2" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
     <PackageReference Include="Ical.Net" Version="4.2.0" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.39" />
